flutter/p2p_lib_flutter/lib/src/tailcat_cgo_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/tailcat_cgo.h` (the tailcat-cgo C ABI).
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class TailcatCgoBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  TailcatCgoBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  TailcatCgoBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Frees a string previously returned by any tailcat_* function.
  void tailcat_free_string(ffi.Pointer<ffi.Char> s) {
    return _tailcat_free_string(s);
  }

  late final _tailcat_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'tailcat_free_string',
      );
  late final _tailcat_free_string = _tailcat_free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Returns the last error message recorded for `handle`, or an empty string
  /// if there was none. The returned string must be freed with
  /// tailcat_free_string.
  ffi.Pointer<ffi.Char> tailcat_last_error(int handle) {
    return _tailcat_last_error(handle);
  }

  late final _tailcat_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int64)>>(
        'tailcat_last_error',
      );
  late final _tailcat_last_error = _tailcat_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// Generates a new private key and returns it serialized as JSON. The
  /// returned string must be freed with tailcat_free_string.
  ffi.Pointer<ffi.Char> tailcat_privatekey_generate() {
    return _tailcat_privatekey_generate();
  }

  late final _tailcat_privatekey_generatePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'tailcat_privatekey_generate',
      );
  late final _tailcat_privatekey_generate = _tailcat_privatekey_generatePtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Returns the public key portion of a JSON-serialized private key. The
  /// returned string must be freed with tailcat_free_string.
  ffi.Pointer<ffi.Char> tailcat_privatekey_public_key(
    ffi.Pointer<ffi.Char> privateKeyJSON,
  ) {
    return _tailcat_privatekey_public_key(privateKeyJSON);
  }

  late final _tailcat_privatekey_public_keyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('tailcat_privatekey_public_key');
  late final _tailcat_privatekey_public_key = _tailcat_privatekey_public_keyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  /// Decodes a connection blob into a human-readable JSON description. The
  /// returned string must be freed with tailcat_free_string.
  ffi.Pointer<ffi.Char> tailcat_connblob_resolve(
    ffi.Pointer<ffi.Char> connBlob,
  ) {
    return _tailcat_connblob_resolve(connBlob);
  }

  late final _tailcat_connblob_resolvePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('tailcat_connblob_resolve');
  late final _tailcat_connblob_resolve = _tailcat_connblob_resolvePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  /// Creates a new server with a freshly generated key pair. Returns an opaque
  /// handle, or 0 on failure.
  int tailcat_server_new() {
    return _tailcat_server_new();
  }

  late final _tailcat_server_newPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>('tailcat_server_new');
  late final _tailcat_server_new = _tailcat_server_newPtr
      .asFunction<int Function()>();

  /// Creates a new server using the given JSON-serialized private key. Returns
  /// an opaque handle, or 0 on failure.
  int tailcat_server_new_with_key(ffi.Pointer<ffi.Char> privateKeyJSON) {
    return _tailcat_server_new_with_key(privateKeyJSON);
  }

  late final _tailcat_server_new_with_keyPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ffi.Char>)>>(
        'tailcat_server_new_with_key',
      );
  late final _tailcat_server_new_with_key = _tailcat_server_new_with_keyPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Adds a client public key to the server's allow-list. Returns 0 on
  /// success, non-zero on failure (see tailcat_last_error).
  int tailcat_server_set_allowed_client(
    int handle,
    ffi.Pointer<ffi.Char> pubKeyText,
  ) {
    return _tailcat_server_set_allowed_client(handle, pubKeyText);
  }

  late final _tailcat_server_set_allowed_clientPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Int64, ffi.Pointer<ffi.Char>)>
      >('tailcat_server_set_allowed_client');
  late final _tailcat_server_set_allowed_client =
      _tailcat_server_set_allowed_clientPtr
          .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  /// Starts the server's networking. Returns 0 on success, non-zero on
  /// failure (see tailcat_last_error).
  int tailcat_server_start(int handle) {
    return _tailcat_server_start(handle);
  }

  late final _tailcat_server_startPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int64)>>(
        'tailcat_server_start',
      );
  late final _tailcat_server_start = _tailcat_server_startPtr
      .asFunction<int Function(int)>();

  /// Blocks up to timeoutMs waiting for an incoming connection. Returns an
  /// opaque connection handle, 0 on timeout, or a negative value on error (see
  /// tailcat_last_error).
  int tailcat_server_accept(int handle, int timeoutMs) {
    return _tailcat_server_accept(handle, timeoutMs);
  }

  late final _tailcat_server_acceptPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Int64, ffi.Int64)>>(
        'tailcat_server_accept',
      );
  late final _tailcat_server_accept = _tailcat_server_acceptPtr
      .asFunction<int Function(int, int)>();

  /// Returns the connection blob (token) that clients use to reach this
  /// server. The returned string must be freed with tailcat_free_string.
  ffi.Pointer<ffi.Char> tailcat_server_connblob(int handle) {
    return _tailcat_server_connblob(handle);
  }

  late final _tailcat_server_connblobPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int64)>>(
        'tailcat_server_connblob',
      );
  late final _tailcat_server_connblob = _tailcat_server_connblobPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// Returns the server's current state (e.g. allowed clients) serialized as
  /// JSON. The returned string must be freed with tailcat_free_string.
  ffi.Pointer<ffi.Char> tailcat_server_state(int handle) {
    return _tailcat_server_state(handle);
  }

  late final _tailcat_server_statePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int64)>>(
        'tailcat_server_state',
      );
  late final _tailcat_server_state = _tailcat_server_statePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// Closes the server and releases its handle. Returns 0 on success.
  int tailcat_server_close(int handle) {
    return _tailcat_server_close(handle);
  }

  late final _tailcat_server_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int64)>>(
        'tailcat_server_close',
      );
  late final _tailcat_server_close = _tailcat_server_closePtr
      .asFunction<int Function(int)>();

  /// Creates a new client with a freshly generated key pair, targeting the
  /// given connection blob. Returns an opaque handle, or 0 on failure.
  int tailcat_client_new(ffi.Pointer<ffi.Char> connBlob) {
    return _tailcat_client_new(connBlob);
  }

  late final _tailcat_client_newPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ffi.Char>)>>(
        'tailcat_client_new',
      );
  late final _tailcat_client_new = _tailcat_client_newPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Creates a new client using the given JSON-serialized private key,
  /// targeting the given connection blob. Returns an opaque handle, or 0 on
  /// failure.
  int tailcat_client_new_with_key(
    ffi.Pointer<ffi.Char> connBlob,
    ffi.Pointer<ffi.Char> privateKeyJSON,
  ) {
    return _tailcat_client_new_with_key(connBlob, privateKeyJSON);
  }

  late final _tailcat_client_new_with_keyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int64 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('tailcat_client_new_with_key');
  late final _tailcat_client_new_with_key = _tailcat_client_new_with_keyPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Returns the client's own public key serialized as JSON. The returned
  /// string must be freed with tailcat_free_string.
  ffi.Pointer<ffi.Char> tailcat_client_public_key(int handle) {
    return _tailcat_client_public_key(handle);
  }

  late final _tailcat_client_public_keyPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int64)>>(
        'tailcat_client_public_key',
      );
  late final _tailcat_client_public_key = _tailcat_client_public_keyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// Pings the server and returns the round-trip latency in milliseconds, or
  /// a negative value on error/timeout (see tailcat_last_error).
  int tailcat_client_ping(int handle, int timeoutMs) {
    return _tailcat_client_ping(handle, timeoutMs);
  }

  late final _tailcat_client_pingPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Int64, ffi.Int64)>>(
        'tailcat_client_ping',
      );
  late final _tailcat_client_ping = _tailcat_client_pingPtr
      .asFunction<int Function(int, int)>();

  /// Dials a TCP port on the server. Returns an opaque connection handle, or 0
  /// on failure (see tailcat_last_error).
  int tailcat_client_dial_tcp_port(int handle, int port, int timeoutMs) {
    return _tailcat_client_dial_tcp_port(handle, port, timeoutMs);
  }

  late final _tailcat_client_dial_tcp_portPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int64 Function(ffi.Int64, ffi.Int, ffi.Int64)>
      >('tailcat_client_dial_tcp_port');
  late final _tailcat_client_dial_tcp_port = _tailcat_client_dial_tcp_portPtr
      .asFunction<int Function(int, int, int)>();

  /// Closes the client and releases its handle. Returns 0 on success.
  int tailcat_client_close(int handle) {
    return _tailcat_client_close(handle);
  }

  late final _tailcat_client_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int64)>>(
        'tailcat_client_close',
      );
  late final _tailcat_client_close = _tailcat_client_closePtr
      .asFunction<int Function(int)>();

  /// Reads up to `length` bytes from the connection into `buf`. Returns the
  /// number of bytes read, -2 on clean EOF, or another negative value on error
  /// (see tailcat_last_error).
  int tailcat_conn_read(int handle, ffi.Pointer<ffi.Uint8> buf, int length) {
    return _tailcat_conn_read(handle, buf, length);
  }

  late final _tailcat_conn_readPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Int64, ffi.Pointer<ffi.Uint8>, ffi.Int)
        >
      >('tailcat_conn_read');
  late final _tailcat_conn_read = _tailcat_conn_readPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  /// Writes `length` bytes from `buf` to the connection. Returns the number of
  /// bytes written, or a negative value on error (see tailcat_last_error).
  int tailcat_conn_write(int handle, ffi.Pointer<ffi.Uint8> buf, int length) {
    return _tailcat_conn_write(handle, buf, length);
  }

  late final _tailcat_conn_writePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Int64, ffi.Pointer<ffi.Uint8>, ffi.Int)
        >
      >('tailcat_conn_write');
  late final _tailcat_conn_write = _tailcat_conn_writePtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  /// Half-closes the connection's write side (sends FIN / TCP CloseWrite),
  /// leaving the read side open. Returns 0 on success.
  int tailcat_conn_close_write(int handle) {
    return _tailcat_conn_close_write(handle);
  }

  late final _tailcat_conn_close_writePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int64)>>(
        'tailcat_conn_close_write',
      );
  late final _tailcat_conn_close_write = _tailcat_conn_close_writePtr
      .asFunction<int Function(int)>();

  /// Fully closes the connection and releases its handle. Returns 0 on
  /// success.
  int tailcat_conn_close(int handle) {
    return _tailcat_conn_close(handle);
  }

  late final _tailcat_conn_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int64)>>(
        'tailcat_conn_close',
      );
  late final _tailcat_conn_close = _tailcat_conn_closePtr
      .asFunction<int Function(int)>();
}
